# OpenCVTest

./: .clang-format  CMakeLists.txt  CMakeLists.txt.user.d2d4fda  mainwindow.cpp  mainwindow.h  mainwindow.ui  videocapturehandler.cpp  videocapturehandler.h
